start jpc process interactive instead of init-script